--- a/public/views/ep-dashboard-edit.hbs
+++ b/public/views/ep-dashboard-edit.hbs
@@ -41,13 +41,25 @@
                           <table cellpadding="0" cellspacing="0" width="100%"
                             style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                             <tr>
-                              <td align="center" style="padding:30px;Margin:0">
-                                <p
-                                  style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#333333;font-size:16px">
-                                  Welcome!<br>
-                                  You’ve earned…
+                              <td style="padding:30px;Margin:0">
 
-                                </p>
+<form method="POST">
+    <input name="name" placeholder="name" value="{{user.firstName}}"><br>
+    <input name="phone"  placeholder="phone"><br>
+    <input name="email"  placeholder="email" value="{{user.email}}"><br>
+    <select name="timezone">
+        {{#each timezones}}
+            <option value="{{this}}" {{isSelected this ../user.timezone}}>{{this}}</option>
+        {{/each}}
+    </select><br>
+    <select name="countryCode">
+        {{#each countryCodes}}
+            <option value="{{@key}}" {{isSelected @key ../user.countryCode}}>{{this}}</option>
+        {{/each}}
+    </select>
+    <br>
+    <button type="submit" class="btn btn-primary" >Update</button>
+</form>
                               </td>
                             </tr>
                           </table>
@@ -55,192 +67,6 @@
                       </tr>
                     </table>
                   </td>
-                </tr>
-                <tr>
-                  <td align="left" style="padding:20px;Margin:0">
-                    <!--[if mso]><table style="width:760px" cellpadding="0" cellspacing="0"><tr><td style="width:400px" valign="top"><![endif]-->
-                    <table cellpadding="0" cellspacing="0" align="left" class="es-left"
-                      style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:left">
-                      <tr>
-                        <td align="left" style="padding:0;Margin:0;width:400px">
-                          <table cellpadding="0" cellspacing="0" width="100%"
-                            style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
-                            <tr>
-                              <td align="center" style="padding:0;Margin:0;font-size:0px;"><img id="badge-image"
-                                  class="adapt-img" src="{{badgeUrl}}" alt
-                                  style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic"
-                                  width="300"></td>
-                            </tr>
-                            <tr>
-                              <td align="center" class="es-m-txt-c es-m-p25t" style="padding:10px;Margin:0">
-                                <p
-                                  style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:32px;color:#09019f;font-size:16px">
-                                  Share it now!</p>
-                              </td>
-                            </tr>
-                            <tr>
-                              <td align="center" class="es-m-txt-c" style="padding:10px;Margin:0;font-size:0">
-                                <table cellpadding="0" cellspacing="0" class="es-table-not-adapt es-social"
-                                  style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
-                                  <tr>
-                                    <td align="center" valign="top" style="padding:0;Margin:0;padding-right:40px">
-                                      <a target="_blank"
-                                        href="https://twitter.com/intent/tweet?url=https://epoints.savesoil.cc/point-badge%3Fpoint={{pointsEarnedToday}}%26total={{summedPoints}}%26theme=greenred_bottom%26confetti=1%26share%3Dtwitter"
-                                        style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#1376C8;font-size:14px"><img
-                                          title="Twitter" src="{{baseUrl}}/img/vector.png" alt="Tw" height="32"
-                                          width="37"
-                                          style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic"></a>
-                                    </td>
-                                    <td align="center" valign="top" style="padding:0;Margin:0"><a target="_blank"
-                                        href="https://www.facebook.com/sharer/sharer.php?u=https://epoints.savesoil.cc/point-badge%3Fpoint={{pointsEarnedToday}}%26total={{summedPoints}}%26theme=greenred_bottom%26confetti=1%26share%3Dfacebook"
-                                        style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#1376C8;font-size:14px"><img
-                                          title="Facebook" src="{{baseUrl}}/img/facebook_1.png" alt="Fb" height="32"
-                                          width="15"
-                                          style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic"></a>
-                                    </td>
-                                  </tr>
-                                </table>
-                              </td>
-                            </tr>
-                          </table>
-                        </td>
-                      </tr>
-                    </table>
-                    <!--[if mso]></td><td style="width:300px" valign="top"><![endif]-->
-                    <table cellpadding="0" cellspacing="0" class="es-left" align="left"
-                      style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:left">
-                      <tr>
-                        <td align="left" style="padding:0;Margin:0;width:300px">
-                          <table id="point-events" cellpadding="0" cellspacing="0" width="100%"
-                            style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
-                            <tr>
-                              <td colspan="2" align="left"
-                                style="padding:0;Margin:0;padding-top:10px;padding-bottom:10px;padding-right:10px">
-                                <p
-                                  style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:30px;color:#333333;font-size:20px">
-                                  <strong>Points breakdown</strong> <span style="font-size: 10px;">({{#if timezone}}{{timezone}}{{else}}UTC{{/if}})</span> </p>
-                              </td>
-                            </tr>
-                            <tr>
-                              <td colspan="2" style="padding:0;Margin:0">
-                                <hr style="Margin:0">
-                              </td>
-                            </tr>
-                            <tbody id="events">
-                              {{#each events}}
-                              <tr>
-                                <td align="center" height="60" width="60" style="padding:0;Margin:0">
-                                  <div class="point-badge">{{this.points}}</div>
-                                </td>
-                                <td align="left" style="padding:0;Margin:0;padding-top:10px;padding-bottom:10px">
-                                  <p
-                                    style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#333333;font-size:16px">
-                                    <span style="font-size:19px">{{this.formattedTimestamp}}</span><br>{{this.Verb}}
-                                    {{this.platform}}
-                                  </p>
-                                </td>
-                              </tr>
-                              {{/each}}
-                            </tbody>
-                            <tr id="show-all-row">
-                              <td colspan="2" align="left" style="padding:0;Margin:0;padding-top:20px"><span
-                                  class="es-button-border"
-                                  style="border-style:solid;border-color:#2CB543;background:#74b644;border-width:0px 0px 2px 0px;display:inline-block;border-radius:6px;width:auto;border-bottom-width:0px"><a
-                                    href="#" id="view-all-point-events" class="es-button"
-                                    style="mso-style-priority:100 !important;text-decoration:none;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;color:#FFFFFF;font-size:18px;border-style:solid;border-color:#74b644;border-width:10px 20px 10px 20px;display:inline-block;background:#74b644;border-radius:6px;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;font-weight:normal;font-style:normal;line-height:22px;width:auto;text-align:center">Show
-                                    more</a></span></td>
-                            </tr>
-                          </table>
-                        </td>
-                      </tr>
-                    </table>
-                    <!--[if mso]></td><td style="width:0px"></td><td style="width:60px" valign="top"><![endif]-->
-                    <!--[if mso]></td></tr></table><![endif]-->
-                  </td>
-                </tr>
-                <tr>
-                  <td class="es-m-p20" align="left" style="padding:30px;Margin:0">
-                    <!--[if mso]><table style="width:740px" cellpadding="0" cellspacing="0"><tr><td style="width:428px" valign="top"><![endif]-->
-                    {{#if haveUnconnectedPlatforms}}
-                    <table cellpadding="0" cellspacing="0" class="es-left" align="left"
-                      style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:left">
-                      <tr>
-                        <td class="es-m-p20b" align="left" style="padding:0;Margin:0;width:428px">
-                          <table cellpadding="0" cellspacing="0" width="100%"
-                            style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
-                            <tr>
-                              <td align="left"
-                                style="padding:0;Margin:0;padding-top:10px;padding-left:20px;padding-right:30px">
-                                <h1
-                                  style="Margin:0;line-height:30px;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;font-size:20px;font-style:normal;font-weight:normal;color:#333333;text-align:left">
-                                  <strong>Earth Points</strong></h1>
-                                <p
-                                  style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#333333;font-size:16px;text-align:left">
-                                  <br>
-                                  Connect your other social media accounts to earn more points. Don't forget to use the hashtag <strong>#savesoil</strong>. </p>
-                                <p
-                                  style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'merriweather sans', 'helvetica neue', helvetica, arial, sans-serif;line-height:21px;color:#333333;font-size:14px;display:none">
-                                  <br></p>
-                              </td>
-                            </tr>
-                          </table>
-                        </td>
-                      </tr>
-                    </table>
-                    <!--[if mso]></td><td style="width:20px"></td><td style="width:292px" valign="top"><![endif]-->
-                    <table cellpadding="0" cellspacing="0" class="es-right" align="right"
-                      style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:right">
-                      <tr>
-                        <td align="left" style="padding:0;Margin:0;width:292px">
-                          <table cellpadding="0" cellspacing="0" width="100%"
-                            style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:separate;border-spacing:0px;border-width:6px;border-style:solid;border-color:transparent;border-radius:20px;background-color:#10069f"
-                            bgcolor="#10069F">
-                            <tr>
-                              <td align="center"
-                                style="Margin:0;padding-bottom:10px;padding-top:25px;padding-left:30px;padding-right:30px">
-                                <p
-                                  style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:30px;color:#ffffff;font-size:20px">
-                                  Connect your account and gain
-                                  <strong>{{connectPlatformPoints}}&nbsp;Earth
-                                    Points</strong>
-                                </p>
-                              </td>
-                            </tr>
-                            <tr>
-                              <td style="padding:0;Margin:0">
-                                <table cellpadding="0" cellspacing="0" width="100%" class="es-menu"
-                                  style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
-                                  <tr class="images">
-                                    {{#each platforms}}
-                                    {{#if this.show }}
-                                    <td align="center" valign="top" width="33%" id="esd-menu-id-0"
-                                      style="Margin:0;padding-left:5px;padding-right:5px;padding-top:20px;padding-bottom:20px;border:0">
-                                      <a href="{{baseUrl}}/connect/{{name}}"><img
-                                          src="{{baseUrl}}/img/connect{{this.name}}.png" alt="Item1" title="Item1"
-                                          width="60" height="60"
-                                          style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic"></a>
-                                    </td>
-                                    {{/if}}
-                                    {{/each}}
-                                  </tr>
-                                </table>
-                              </td>
-                            </tr>
-                            <tr>
-                              <td align="center"
-                                style="Margin:0;padding-top:10px;padding-bottom:10px;padding-left:30px;padding-right:30px">
-                                <p
-                                  style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:21px;color:#ffffff;font-size:14px">
-                                  Rest assured we do not post anything on connected platforms.</p>
-                              </td>
-                            </tr>
-                          </table>
-                        </td>
-                      </tr>
-                    </table>
-                    <!--[if mso]></td></tr></table><![endif]-->
-                  </td>
-                  {{/if}}
                 </tr>
               </table>
             </td>
@@ -370,10 +196,7 @@
                                       href="http://consciousplanet.org/privacy-policy/">Privacy</a></u>  | <u><a
                                       target="_blank"
                                       style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;color:#ffffff;font-size:14px;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif"
-                                      href="/unsubscribe/{{user.userid}}">Manage Subscriptions</a></u>  | <u><a
-                                      target="_blank"
-                                      style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;color:#ffffff;font-size:14px;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif"
-                                      href="/user-edit">Settings</a></u>&nbsp;&nbsp;</p>
+                                      href="/unsubscribe/{{user.userid}}">Manage Subscriptions</a></u>&nbsp;&nbsp;</p>
                               </td>
                             </tr>
                             <!--[if !mso]><!-- -->
