--- a/public/views/ep-dashboard.hbs
+++ b/public/views/ep-dashboard.hbs
@@ -465,6 +465,14 @@
               </select>
             </div>
           </div>
+          <div class="form-group" id="inputPhoneGroup">
+            <label for="inputPhone" class="col-sm-3 control-label">Phone</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="inputPhone" name="phone" placeholder="+91xxxxxxxxxx"
+                value="{{phone}}">
+            </div>
+          </div>
+
 
         </div>
         <div class="modal-footer">
