--- a/public/views/ep-dashboard.hbs
+++ b/public/views/ep-dashboard.hbs
@@ -480,7 +480,7 @@
           {{#if hasConnectedEPBefore}}
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
           {{/if}}
-          <button type="submit" id="profileEditSave" class="btn btn-primary">Save</button>
+          <button type="submit" id="profileEditSave" class="btn btn-primary" {{#unless hasConnectedEPBefore}}disabled="disabled"{{/unless}}>Save</button>
         </div>
       </div>
     </div>
